# mimo-agent-swarm

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  coordinator.py  message_bus.py  models.py
src/agents/: __init__.py  analyst.py  base.py  executor.py  scout.py
tests/: test_agents.py  test_coordinator.py  test_message_bus.py  test_models.py
