[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimo-agent-swarm"
version = "0.1.0"
description = "AI Agent Swarm Coordinator powered by Xiaomi MiMo V2.5 long-chain reasoning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "mimo-agent-swarm contributors"},
]
keywords = ["ai", "agents", "swarm", "mimo", "xiaomi", "web3", "crypto", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.5.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "asyncio-mqtt>=0.16.0; python_version>='3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/your-org/mimo-agent-swarm"
Repository = "https://github.com/your-org/mimo-agent-swarm"
Issues = "https://github.com/your-org/mimo-agent-swarm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
